<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_offerte">

    <fragment
        android:id="@+id/navigation_offerte"
        android:name="com.example.mytrueapplication.ui.offerte.OfferteFragment"
        android:label="@string/title_offerte"
        tools:layout="@layout/fragment_offerte" />

    <fragment
        android:id="@+id/navigation_preferiti"
        android:name="com.example.mytrueapplication.ui.preferiti.PreferitiFragment"
        android:label="@string/title_preferiti"
        tools:layout="@layout/fragment_preferiti" />

    <fragment
        android:id="@+id/navigation_supermercati"
        android:name="com.example.mytrueapplication.ui.supermercati.SupermercatiFragment"
        android:label="@string/title_supermercati"
        tools:layout="@layout/fragment_supermercati" />
</navigation>