<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:layout_weight="0.7"
            android:focusableInTouchMode="true"
            >

            <LinearLayout
                android:id="@+id/parte1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="10"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">

                <SearchView
                    android:id="@+id/ricerca"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:iconifiedByDefault="false"
                    android:queryHint="Cerca supermercato"
                    android:background="@drawable/round_searchbar"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_filters"
                    android:layout_margin="16dp"
                    android:background="@drawable/round_searchbar"
                    />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8.5">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="10"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="6"
                                android:src="@drawable/elite">
                            </ImageView>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                >
                            </View>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="3"
                                android:orientation="horizontal"
                                android:layout_margin="4dp"
                                android:weightSum="10">

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:src="@drawable/fattorino">
                                </ImageView>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:text="@string/consegnaElite"
                                    android:autoSizeTextType="uniform">
                                </TextView>

                                <View
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1">
                                </View>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="5"
                                    android:text="Via Arno 1    220m"
                                    android:autoSizeTextType="uniform"
                                    android:gravity="bottom">
                                </TextView>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="10"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="6"
                                android:src="@drawable/simply">
                            </ImageView>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                >
                            </View>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="3"
                                android:orientation="horizontal"
                                android:layout_margin="4dp"
                                android:weightSum="10">

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:src="@drawable/fattorino">
                                </ImageView>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:text="@string/consegnaSimply"
                                    android:autoSizeTextType="uniform">
                                </TextView>

                                <View
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1">
                                </View>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="5"
                                    android:text="Via Corsica 13   6500m"
                                    android:autoSizeTextType="uniform"
                                    android:gravity="bottom">
                                </TextView>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="10"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="6"
                                android:src="@drawable/carrefour">
                            </ImageView>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                >
                            </View>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="3"
                                android:orientation="horizontal"
                                android:layout_margin="4dp"
                                android:weightSum="10">

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:src="@drawable/fattorino">
                                </ImageView>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:text="@string/consegnaCarrefour"
                                    android:autoSizeTextType="uniform">
                                </TextView>

                                <View
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1">
                                </View>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="5"
                                    android:text="Via Po 106    700m"
                                    android:autoSizeTextType="uniform"
                                    android:gravity="bottom">
                                </TextView>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="10"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="6"
                                android:src="@drawable/conad">
                            </ImageView>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                >
                            </View>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="3"
                                android:orientation="horizontal"
                                android:layout_margin="4dp"
                                android:weightSum="10">

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:src="@drawable/fattorino">
                                </ImageView>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:text="@string/consegnaConad"
                                    android:autoSizeTextType="uniform">
                                </TextView>

                                <View
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1">
                                </View>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="5"
                                    android:text="Piazza dell'Indipendenza 28    1,1km"
                                    android:autoSizeTextType="uniform"
                                    android:gravity="bottom">
                                </TextView>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>



                </LinearLayout>


            </ScrollView>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/riempimento_base"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>